# cuVSLAM-Profilling-TOML

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.wheel  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  build_docs.sh  build_release.sh  build_wheel.sh  copy_from_remote.sh  copy_to_remote.sh  create_release_arch.sh  cuvslam_datasets  license_header.txt
doc/: CMakeLists.txt  Doxyfile.in  index.md
libs/: CMakeLists.txt
libs/camera/: CMakeLists.txt  camera.cpp  camera.h  frustum_intersection_graph.cpp  frustum_intersection_graph.h  observation.cpp  observation.h  rig.h
libs/camera_rig_edex/: CMakeLists.txt  blackout_oscillator_filter.cpp  blackout_oscillator_filter.h  camera_rig_edex.cpp  camera_rig_edex.h  repeated_camera_rig_edex.cpp  repeated_camera_rig_edex.h  shuttle_camera_rig_edex.cpp  shuttle_camera_rig_edex.h
libs/common/: CMakeLists.txt  affine.h  camera_id.h  coordinate_system.cpp  coordinate_system.h  environment.h  error.h  fixed_array.h  fpexceptions.h  frame_id.h  image.h  image_dropper.h  image_matrix.h  imu_calibration.cpp  imu_calibration.h  imu_measurement.cpp  imu_measurement.h  include_eigen.h  include_gtest.h  include_json.h  interfaces.h  isometry.h  isometry_utils.h  json_to_eigen.h  log.cpp  log.h  log_types.h  rerun.h  rotation_utils.h  statistic.h  stopwatch.h  stream.h  tga.cpp  tga.h  thread_name.h  thread_safe_queue.h  time.h  track_id.h  types.h  unaligned_types.h  (+3 more)
libs/cuda_modules/: CMakeLists.txt  box_prefilter.cpp  box_prefilter.h  cuda_convolutor.cpp  cuda_convolutor.h  cuda_graph_helper.h  cuda_helper.cpp  cuda_helper.h  culib_helper.h  gftt.cpp  gftt.h  gradient_pyramid.cpp  gradient_pyramid.h  icp_tools.cpp  icp_tools.h  image_cast.cpp  image_cast.h  image_pyramid.cpp  image_pyramid.h  lk_tracker.cpp  lk_tracker.h  sba.cpp  sba.h  selection_v2.cpp  selection_v2.h  st_tracker.cpp  st_tracker.h
libs/cuvslam/: CMakeLists.txt  cuvslam2.cpp  cuvslam2.h  cuvslam_gpu.cpp  cuvslam_gpu.h  debug_dump.cpp  debug_dump.h  ground_constraint2.cpp  ground_constraint2.h  internal.h  version.cpp  version.h.in
libs/edex/: CMakeLists.txt  edex.cpp  edex.h  edex_internal.h  edex_types.h  file_name_tools.h  timeline.h
libs/epipolar/: CMakeLists.txt  camera_projection.cpp  camera_projection.h  camera_selection.h  fundamental_matrix_utils.cpp  fundamental_matrix_utils.h  fundamental_ransac.h  homography.cpp  homography.h  homography_decomp.cpp  homography_ransac.h  optscalar_triangle_ransac.h  point_reconstruction.h  points_normalization.cpp  points_normalization.h  resectioning_utils.cpp  resectioning_utils.h  resectioning_utils_internal.h
libs/imu/: CMakeLists.txt  imu_preintegration.cpp  imu_preintegration.h  imu_sba.h  imu_sba_fixed_vel.cpp  imu_sba_gpu.h  imu_sba_gpu_fixed_vel.cpp  imu_sba_problem.cpp  imu_sba_problem.h  inertial_optimization.cpp  inertial_optimization.h  linear_filter.cpp  linear_filter.h  linear_solver.cpp  linear_solver.h  positive_matrix.cpp  positive_matrix.h  soft_inertial_pnp.cpp  soft_inertial_pnp.h
libs/launcher/: CMakeLists.txt  base_launcher.cpp  base_launcher.h  launcher_create.cpp  launcher_create.h  monocular_launcher.cpp  monocular_launcher.h  multi_camera_launcher.cpp  multi_camera_launcher.h  multi_camera_launcher_base.cpp  multi_camera_launcher_base.h  rgbd_camera_launcher.cpp  rgbd_camera_launcher.h  visual_inertial_launcher.cpp  visual_inertial_launcher.h  visualizer.cpp  visualizer.h
libs/log/: CMakeLists.txt  log.h  log_eigen.h  log_enable.h  logger.cpp  logger_interface.h  spdlog_logger.cpp
libs/map/: CMakeLists.txt  keyframe.cpp  keyframe.h  landmark.cpp  map.cpp  map.h  service.cpp  service.h
libs/math/: CMakeLists.txt  nonlinear_optimization.h  pgo.cpp  pgo.h  ransac.h  robust_cost_function.cpp  robust_cost_function.h  sigmapoint.h  transform_between_pointclouds.cpp  transform_between_pointclouds.h  twist.cpp  twist.h  twist_to_angle.cpp  twist_to_angle.h  twist_to_quaternion.h
libs/odometry/: CMakeLists.txt  ground_integrator.cpp  ground_integrator.h  increment_pose.h  ipredictor.h  ivisual_odometry.h  mono_visual_odometry.cpp  mono_visual_odometry.h  multi_visual_odometry.cpp  multi_visual_odometry.h  multi_visual_odometry_base.cpp  multi_visual_odometry_base.h  pose_prediction.cpp  pose_prediction.h  rgbd_odometry.cpp  rgbd_odometry.h  stereo_inertial_odometry.cpp  stereo_inertial_odometry.h  svo_config.h  svo_config_gflags.h
libs/pipelines/: CMakeLists.txt  feature_predictor.cpp  feature_predictor.h  inertial_pnp.cpp  inertial_pnp.h  sba_mono_wrapper.cpp  service_sba.cpp  service_sba.h  service_sba_gpu.h  sfm_solver_interface.h  track.h  track_online_inertial.cpp  track_online_inertial.h  track_online_mono.cpp  track_online_mono.h  track_online_multi.cpp  track_online_multi.h  track_online_rgbd.cpp  track_online_rgbd.h  tracker_state_machine.cpp  tracker_state_machine.h  triangulator.cpp  triangulator.h  visualizer.cpp  visualizer.h  winsorizer.cpp  winsorizer.h
libs/pnp/: CMakeLists.txt  lift_tracks.cpp  mono_pnp.cpp  mono_pnp.h  multicam_pnp.cpp  multicam_pnp.h  visual_icp.cpp  visual_icp.h  visualizer.cpp  visualizer.h
libs/profiler/: CMakeLists.txt  README.md  profiler.cpp  profiler.h  profiler_enable.h
libs/refinement/: CMakeLists.txt  bundle_adjustment_problem.h  cost_pinhole.cpp  cost_pinhole.h  cost_rational_polynomial.cpp  cost_rational_polynomial.h  loss_functions.cpp  loss_functions.h  refinement.cpp  refinement.h
libs/sba/: CMakeLists.txt  bundle_adjustment_problem.h  mono_sba_solver.cpp  mono_sba_solver.h  sba_config.h  sba_config_gflags.h  schur_complement_bundler_cpu.cpp  schur_complement_bundler_cpu.h  schur_complement_bundler_gpu.cpp  schur_complement_bundler_gpu.h
libs/slam/: CMakeLists.txt
libs/sof/: CMakeLists.txt  basic_convolutor.cpp  basic_convolutor.h  basic_image_downscaler.cpp  basic_image_downscaler.h  box_blur.cpp  box_blur.h  (+48 more)
python/: CMakeLists.txt  __init__.py  cuvslam2.cpp  pyproject.toml  refinement.cpp  setup.py  tracker.py
tools/: CMakeLists.txt
(+379 files in other folders)
